<resources>
    <string name="app_name">Car Kharido</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="latest_car_s">Latest Car\'s</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="just_a_few_quick_things_to_get_started_2">Just a few quick things to get started</string>
    <string name="email_id">Email ID</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="new_password">New Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_with">Or with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin">SignIn</string>
    <string name="enter_password39">Enter Password</string>
    <string name="i_agree_with_the_term_s_and_condition_s">I Agree With The Term\'s And Condition\'s</string>
    <string name="sign_up38">Sign Up</string>
    <string name="todo9">TODO</string>
    <string name="profile_information">Profile Information</string>
    <string name="name">Name :-</string>
    <string name="e_mail">E-Mail :-</string>
    <string name="password">Password :-</string>
    <string name="update">Update</string>
    <string name="sign_in32">Sign In</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back you\'ve been missed</string>
    <string name="email_id55">Email ID</string>
    <string name="enter_email_id55">Enter Email ID</string>
    <string name="password33">Password</string>
    <string name="enter_password32">Enter Password</string>
    <string name="remeber_me22">Remeber Me</string>
    <string name="forgot_password11">Forgot Password ?</string>
    <string name="sign_in323">Sign In</string>
    <string name="or_with221">Or with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up3232">Sign Up</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
</resources>