<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin"
    tools:context=".ui.Sign_In_Activity">

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in32"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="36sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/para_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back_you_ve_been_missed"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/signin_text"
        android:layout_marginTop="5dp"/>





    <TextView
        android:id="@+id/signin_emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/para_signin"
        android:text="@string/email_id55"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="45dp"
        android:layout_marginStart="20dp"
        android:textSize="23sp"/>

    <EditText
        android:id="@+id/signin_email_box"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/enter_email_id55"
        android:background="@drawable/rounded"
        android:paddingStart="25dp"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:layout_below="@+id/signin_emailid"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="30dp"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry,TextFields" />





    <TextView
        android:id="@+id/signin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin_email_box"
        android:text="@string/password33"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textSize="23sp"/>

    <EditText
        android:id="@+id/signin_password_box"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingStart="25dp"
        android:hint="@string/enter_password32"
        android:textSize="20sp"
        android:background="@drawable/rounded"
        android:layout_below="@+id/signin_password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />




    <CheckBox
        android:id="@+id/signin_checkbox"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_below="@+id/signin_password_box"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/signin_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remeber_me22"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:layout_toEndOf="@+id/signin_checkbox"
        android:paddingStart="10dp"
        android:layout_below="@+id/signin_password_box"
        tools:ignore="RtlSymmetry" />




    <TextView
        android:id="@+id/signin_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/forgot_password11"
        android:layout_below="@+id/signin_password_box"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textColor="@color/black"/>



    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/signin_forgot_password"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in323"
        android:textAlignment="center"
        android:paddingTop="12dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/signup_button"/>


    <LinearLayout
        android:id="@+id/divider_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/sign_in_button"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#615C5C" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_with221"
            android:textColor="#070707"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#837D7D" />
    </LinearLayout>


    <Button
        android:id="@+id/facebook_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_ternary"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginEnd="230dp"
        android:text="@string/facebook"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/divider_section"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_facebook"
        android:drawablePadding="10dp"
        android:gravity="center_vertical|center_horizontal"
        />

    <Button
        android:id="@+id/google_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_ternary"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginEnd="30dp"
        android:text="@string/google"
        android:layout_marginStart="230dp"
        android:layout_below="@+id/divider_section"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_google"
        android:drawablePadding="10dp"
        android:gravity="center_vertical|center_horizontal"
        />


    <TextView
        android:id="@+id/bottom_text_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="#575353"
        android:textSize="17sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />


    <TextView
        android:id="@+id/bottom_text_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up3232"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/bottom_text_01"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />



</RelativeLayout>
